# AgnesAIStudioWin

./: .gitignore  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs
src/css/: chat.css  image.css  main.css  modal.css  sidebar.css  theme.css  video.css
src/js/: api.js  app.js  chat.js  image.js  modal.js  settings.js  sidebar.js  utils.js  video.js
