[package]
name = "agnes-ai-studio"
version = "1.0.0"
description = "Agnes AI Studio"
authors = ["Agnes AI"]
edition = "2021"

[lib]
name = "agnes_ai_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
